# fem-helmholtz-eqn

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  runner.py
.github/: README.md
notebooks/: 1D_soln.ipynb  2D_soln_dirichlet_conditions.ipynb  2d_soln_neumann_sommerfeld_conditions.ipynb
src/: helmholtz.py  utils.py  viz.py
src/solvers/: __init__.py  base.py  fem2d.py  fem2d_dirichlet.py  fem2d_dirichlet_sommerfeld.py  fem2d_neumann_dirichlet.py  utils.py
wandb/: latest-run
