[project]
name = "femhelmholtz"
version = "0.0.1"
description = "Finite Element Methods for the Helmholtz Equation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "pre-commit>=4.1.0",
    "ruff>=0.11.0",
    "scipy>=1.15.2",
]

[tool.uv]
package = true

[tool.uv.sources]
fem_helmholtz = { workspace = true }
